<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.fragments.FragmentLogin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/welcome_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_black"
            android:text="@string/welcome_back"
            android:textColor="@color/secondaryTextColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome_text_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/lorem_13"
            android:textColor="@color/secondaryTextColor"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/welcome_label"
            app:layout_constraintTop_toBottomOf="@+id/welcome_label" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/username_hint"
            app:boxCornerRadiusBottomEnd="@dimen/input_field_corner"
            app:boxCornerRadiusBottomStart="@dimen/input_field_corner"
            app:boxCornerRadiusTopEnd="@dimen/input_field_corner"
            app:boxCornerRadiusTopStart="@dimen/input_field_corner"
            app:boxStrokeColor="@color/input_field_stroke_color"
            app:boxStrokeErrorColor="@color/red"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:layout_constraintEnd_toEndOf="@+id/welcome_text_more"
            app:layout_constraintStart_toStartOf="@+id/welcome_text_more"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text_more">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_medium"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password_hint"
            app:boxCornerRadiusBottomEnd="@dimen/input_field_corner"
            app:boxCornerRadiusBottomStart="@dimen/input_field_corner"
            app:boxCornerRadiusTopEnd="@dimen/input_field_corner"
            app:boxCornerRadiusTopStart="@dimen/input_field_corner"
            app:boxStrokeColor="@color/input_field_stroke_color"
            app:boxStrokeErrorColor="@color/red"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:layout_constraintEnd_toEndOf="@+id/username_input_layout"
            app:layout_constraintStart_toStartOf="@+id/username_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/username_input_layout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/primaryDarkColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_medium"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/cb_remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/remember_me"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/password_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/password_input_layout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:text="@string/btn_login_text"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/btn_corner"
            app:layout_constraintBottom_toTopOf="@+id/btn_forgot_pass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_forgot_pass"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/primaryDarkColor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/btn_corner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>